--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Hive Wear Tech: E-Commerce</h5>
+              <h5 class="card-title">Hive Tech Wear: E-Commerce</h5>
               <p class="card-text">A convenient and fun way to browse featured clothing & accessories from some of the best clothing brands online, especially aimed at teenagers. With this web app, you can browse products by any color you like or by trending colors, save products into favorites, and share products with friends on social media.</p>
               <p class="card-text">
                 <small class="text-muted">
